2.3.9 (1/4/20)
- FIX: display headers in console was bugged

2.3.8.1 (31/03/2020)
- fix: on win only : sometimes bytes was considering as str utf8 (?!)

2.3.8 (29/03/2020)
- EVOL: decode all encoding as utf8, and no more json escaping non-ascii .. all utf8 !

2.3.7 (15/03/2020)
- EVOL: increase limited size of html output body to 8192

2.3.6 (24/3/2020)
- FIX : miss limitation on body

2.3.5 (21/3/2020)
- FIX : make tests false is request is invalid

2.3.4 (21/3/2020)
- EVOL: add a limited repr of outputs in reqman.html generation, to limit size of the html (+ trick '+')
- EVOL : change xml indentation from 8 to 4
- EVOL: simple copy-clipboard requests/response from reqman.html

2.3.3 (11/3/2020)
- EVOL : better extract xpath in jpath
- FIX: a TypeError when comparing differents types

2.3.2 (10/3/2020)
- EVOL : xml/xpath returns always a list ! 

2.3.1 (9/3/2020)
- FIX : resolve trouble

2.3.0 (7/3/2020)
- EVOL : xml/xpath tests enabled !

2.2.6.0 (04/03/2020)
- EVOL: Add proxy support (via HTTP(S)_PROXY environment variables), thanks @iamhsa 
- FIX: dual result now display ok/total per view (not the cumulative one)

2.2.5.0 (31/01/2020)
- EVOL:
    - don't try to play requests which contains non resolved vars in path/headers/body
    - non playable request (non resolved, timeout, unreachable, invalid) are greyed out in outputs

2.2.4.0 (19/12/2019)
- EVOL: add a way to update env with command line (ex: "reqman . var:ok" )
2.2.3.0 (17/12/2019)
- FIX: save content to var was bugged (Content serialization)
2.2.2.0 (11/12/2019)
- EVOL: not append root if url has a scheme
- EVOL: switchs renamed switches (switchs is deprecated) ... thanks @mikeputnam
2.2.1.0 (20/11/2019)
- minor fixes: http version in html output is better ;-)
- evol: reqman version in meta tag in html output
2.2.0.0 (18/11/2019)
- EVOL: change http lib from httpcore to aiohttp, for the ability to send mixed case headers
2.1.8.0 (15/11/2019)