@@ -1,5 +1,6 @@
 2.3.9 (1/4/20)
 - FIX: display headers in console was bugged
+- FIX: better guess value
 
 2.3.8.1 (31/03/2020)
 - fix: on win only : sometimes bytes was considering as str utf8 (?!)
